--- a/src/input/piano.css
+++ b/src/input/piano.css
@@ -3,63 +3,14 @@
 	user-select: none;
 	position: relative;
 	display: flex;
-	margin-top: 40px;
 	overflow: auto;
 }
 
-.piano li:first-child {
-	border-radius: 5px 0 5px 5px
+.piano :first-child {
+	border-radius: 5px 0 5px 5px;
 }
 
-.piano li:last-child {
-	border-radius: 0 5px 5px 5px
-}
-
-.key {
-	position: relative;
-}
-
-.key > button {
-	width: 100%;
-	height: 100%;
-	border: none;
-	background: none;
-}
-.key.black > button {
-	color: white;
-}
-
-.white {
-	height: 230px;
-	width: 70px;
-	border-left: 1px solid #bbb;
-	border-bottom: 1px solid #bbb;
-	border-radius: 0 0 5px 5px;
-	box-shadow: -1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(to bottom,#eee 0%,#fff 100%)
-}
-
-.white.active {
-	border-top: 1px solid #777;
-	border-left: 1px solid #999;
-	border-bottom: 1px solid #999;
-	box-shadow: 2px 0 3px rgba(0,0,0,0.1) inset,-5px 5px 20px rgba(0,0,0,0.2) inset,0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%)
-}
-
-.black {
-	z-index: 2;
-	width: 44px;
-	height: 140px;
-	margin: 0 -22px 0 -22px;
-	border: 1px solid #000;
-	border-radius: 0 0 3px 3px;
-	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
-	background: linear-gradient(45deg,#222 0%,#555 100%)
-}
-
-.black.active {
-	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
-	background: linear-gradient(to right,#444 0%,#222 100%)
+.piano :last-child {
+	border-radius: 0 5px 5px 5px;
 }
 
