--- a/src/input/key.css
+++ b/src/input/key.css
@@ -1,20 +1,23 @@
 .key {
-	position: relative;
+	flex-shrink: 0;
 }
-
 .key > button {
 	width: 100%;
 	height: 100%;
 	border: none;
 	background: none;
 }
+.key.white > button {
+	padding-top: calc(var(--white-height) - 10em);
+}
 .key.black > button {
+	padding-top: calc(var(--black-height) - 10em);
 	color: white;
 }
 
 .white {
-	height: 230px;
-	width: 70px;
+	width: var(--white-width);
+	height: var(--white-height);
 	border-left: 1px solid #bbb;
 	border-bottom: 1px solid #bbb;
 	border-radius: 0 0 5px 5px;
@@ -22,7 +25,7 @@
 	background: linear-gradient(to bottom,#eee 0%,#fff 100%)
 }
 
-.white.active {
+.white.held {
 	border-top: 1px solid #777;
 	border-left: 1px solid #999;
 	border-bottom: 1px solid #999;
@@ -30,18 +33,21 @@
 	background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%)
 }
 
+.black, .marginLeft {
+	margin-left: calc(var(--black-width) / -2 - 1px);
+}
+
 .black {
 	z-index: 2;
-	width: 44px;
-	height: 140px;
-	margin: 0 -22px 0 -22px;
+	width: var(--black-width);
+	height: var(--black-height);
 	border: 1px solid #000;
 	border-radius: 0 0 3px 3px;
 	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
 	background: linear-gradient(45deg,#222 0%,#555 100%)
 }
 
-.black.active {
+.black.held {
 	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
 	background: linear-gradient(to right,#444 0%,#222 100%)
 }
