--- a/src/input/key.css
+++ b/src/input/key.css
@@ -16,39 +16,29 @@
 }
 
 .white {
+	--background: rgb(var(--color-whiteKey-background)); 
+	--darkened: color-mix(in srgb, var(--background) 90%, black);
 	width: var(--white-width);
 	height: var(--white-height);
-	border-left: 1px solid #bbb;
-	border-bottom: 1px solid #bbb;
+	border: 1px solid rgb(var(--color-whiteKey-border));
 	border-radius: 0 0 5px 5px;
-	box-shadow: -1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(to bottom,#eee 0%,#fff 100%)
-}
-
-.white.held {
-	border-top: 1px solid #777;
-	border-left: 1px solid #999;
-	border-bottom: 1px solid #999;
-	box-shadow: 2px 0 3px rgba(0,0,0,0.1) inset,-5px 5px 20px rgba(0,0,0,0.2) inset,0 0 3px rgba(0,0,0,0.2);
-	background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%)
+	background: var(--background);
 }
 
 .black, .marginLeft {
-	margin-left: calc(var(--black-width) / -2 - 1px);
+	margin-left: calc(var(--black-width) / -2);
 }
 
 .black {
-	z-index: 2;
+	--background: rgb(var(--color-blackKey-background));
+	--darkened: #000;
+	background: var(--background);
 	width: var(--black-width);
 	height: var(--black-height);
-	border: 1px solid #000;
-	border-radius: 0 0 3px 3px;
-	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -5px 2px 3px rgba(0,0,0,0.6) inset,0 2px 4px rgba(0,0,0,0.5);
-	background: linear-gradient(45deg,#222 0%,#555 100%)
+	z-index: 2;
 }
 
-.black.held {
-	box-shadow: -1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
-	background: linear-gradient(to right,#444 0%,#222 100%)
+.held {
+	background: linear-gradient(to bottom, var(--background) 10%, var(--darkened) 70%);
 }
 
