--- a/src/input/percussion.css
+++ b/src/input/percussion.css
@@ -1,7 +1,20 @@
-.category {
-	width: 100%;
+.samples {
+	--width-button: 4em;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 12em);
+	grid-gap: 1em;
 }
 
-.active {
-	background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%)
+.sample {
+	display: inline-block;
+}
+
+.button {
+	width: 25%;
+	aspect-ratio: 1/1;
+}
+
+.button:active {
+	background: rgb(var(--color--primary-100));
+	color: rgb(var(--color--background-100));
 }
