--- a/src/nav.css
+++ b/src/nav.css
@@ -1,8 +1,17 @@
+.logo {
+	height: 2rem;
+}
+
 nav > ul {
 	display: flex;
-	padding: 1em;
+	align-items: center;
+	padding: .3em .5em 0 .5em;
 }
 
 nav > ul > li {
 	padding-right: 1em;
+}
+
+nav > ul > li:first-child {
+	padding-right: .8em;
 }
