--- a/src/instrument-builder.css
+++ b/src/instrument-builder.css
@@ -1,7 +1,69 @@
 .editor {
-	margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	width: 100%;
+	flex: 1;
+}
+
+.editor > * {
+	width: 100%;
 }
 
 .editor > label {
-	display: block;
+	display: flex;
+}
+
+.editor  input {
+	flex: 1;
+}
+
+.h2 {
+	display: flex;
+	align-items: baseline;
+}
+
+.h2 > span {
+	flex-grow: 1;
+}
+
+.builder {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.dropZone {
+	min-height: 64px;
+	border: 1px dashed gray;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 10px;
+}
+
+.builder > ul {
+	flex-grow: 1;
+}
+
+.editorTitle {
+	display: flex;
+	align-self: flex-start;
+	margin-bottom: .5rem;;
+}
+
+.editorTitle > h3 {
+	flex-grow: 1;
+}
+
+.failed {
+	background: rgb(var(--color--error-100));
+	color: white;
+}
+
+.loading {
+	background: rgb(var(--color--warning-100));
+	color: black;
 }
