--- a/src/instrument-builder.css
+++ b/src/instrument-builder.css
@@ -18,14 +18,6 @@
 	flex: 1;
 }
 
-.h2 {
-	display: flex;
-	align-items: baseline;
-}
-
-.h2 > span {
-	flex-grow: 1;
-}
 
 .builder {
 	height: 100%;
@@ -48,14 +40,11 @@
 	flex-grow: 1;
 }
 
-.editorTitle {
+.titleRow {
 	display: flex;
 	align-self: flex-start;
+	justify-content: space-between;
 	margin-bottom: .5rem;;
-}
-
-.editorTitle > h3 {
-	flex-grow: 1;
 }
 
 .failed {
@@ -66,4 +55,12 @@
 .loading {
 	background: rgb(var(--color--warning-100));
 	color: black;
+}
+
+.willAccept {
+	background: rgb(var(--color--success-100));
+}
+
+.willReject {
+	background: rgb(var(--color--error-100));
 }
