--- a/src/instruments.css
+++ b/src/instruments.css
@@ -1,7 +1,3 @@
-.sidebar {
-	overflow: auto;
-}
-
 .left {
 	width: 200px;
 }
@@ -25,11 +21,6 @@
 	height: 100%;
 }
 
-.userInstrument {
-	display: flex;
-}
-
-.userInstrument  > button:first-child {
-	flex: 1;
-	text-align: left;
+.user {
+	margin-top: 1rem;
 }
