--- a/src/pages/Play.module.css
+++ b/src/pages/Play.module.css
@@ -1,16 +1,17 @@
 .main {
-	height: 100%;
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 }
 
 .display {
 	flex-grow: 1;
-	min-height: 100px;
+	height: 100px;
+	width: 100%;
 }
 
 .input {
 	height: 400px;
-	width: 100vw;
+	width: 100%;
 }
