setup synth, add custom element types, proper global context, more drum layout

--- a/src/components/Drums.module.css
+++ b/src/components/Drums.module.css
@@ -3,21 +3,11 @@
 	--scrollbar-width: 16px;
 	display: flex;
 	height: inherit;
-	flex-direction: column;
-}
-
-.played {
-	height: 20%;
-}
-
-.grid {
-	height: 80vh;
-	display: grid;
-	--pad-width: calc(var(--button-width) * 2 + var(--scrollbar-width));
-	grid-template-columns: var(--pad-width) [img] minmax(200px, 1fr) var(--pad-width);
 }
 
 .pad {
+	flex: 1;
+	min-width: calc(var(--button-width) * 2 + var(--scrollbar-width));
 	display: flex;
 	flex-wrap: wrap;
 	align-content: flex-start;
@@ -25,14 +15,13 @@
 }
 
 .pad > button {
-	width: 50%;
+	width: var(--button-width);
 	height: var(--button-width);
 }
 
 .drumKit {
+	height: inherit;
 	display: block;
-	grid-column: img;
-	grid-row: 1;
 	justify-self: center;
 	align-self: end;
 }
